[metadata]
name = pacmap
version = 0.5.4
author = Yingfan Wang, Haiyang Huang, Cynthia Rudin, Yaron Shaposhnik
author_email = yingfan.wang@duke.edu
description = The official implementation for PaCMAP: Pairwise Controlled Manifold Approximation Projection
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/YingfanWang/PaCMAP
project_urls =
    Bug Tracker = https://github.com/YingfanWang/PaCMAP/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Intended Audience :: Science/Research
    Intended Audience :: Developers

[options]
package_dir =
    = source_code
packages = find:
python_requires = >=3.6
install_requires =
    scikit-learn >= 0.20
    numba >= 0.50
    annoy >= 1.11
    numpy >= 1.20

[options.packages.find]
where = source_code
